Editor / Collapse directive https://gitlab.ifremer.fr/sextant/geonetwork/-/issues/414.

--- a/web-ui/src/main/resources/catalog/style/gn_editor.less
+++ b/web-ui/src/main/resources/catalog/style/gn_editor.less
@@ -987,6 +987,7 @@ div.gn-individualName {
   .gn-identifiedIssues .gn-add-field,
   .gn-required > label:after {
     display: none;
+    visibility: hidden;
   }
 }
 
